# ftarc

./: .gitignore  CMakeLists.txt  LICENSE  archive_structs.h  archiver.c  archiver.h  archiver_multithread.c  archiver_multithread.h  args_parser.c  args_parser.h  exceptions.c  exceptions.h  feature.md  ftarc_architect.xlsx  ftarc_tests.xlsx  main.c  progress_display.c  progress_display.h  readme.md
compression_algorithms/: huffman.c  huffman.h
utilities/: collections.c  collections.h  colorer.h  graph.c  graph.h  heap.c  heap.h  md5.c  timings.c  timings.h  ustring.c  ustring.h  utils.c  utils.h
